--- a/prepros-6.config
+++ b/prepros-6.config
@@ -32,10 +32,25 @@
         "scss/UI/fonts.scss",
         "scss/UI/color.scss",
         "scss/header/header.scss",
+        "scss/offer/offer.scss",
         "scss/header/navigation.scss",
         "scss/header/about.scss",
         "scss/header/logo.scss",
-        "scss/header/yellow-block.scss"
+        "scss/header/yellow-block.scss",
+        "scss/header/button-block.scss",
+        "scss/offer/blocks/main-block.scss",
+        "scss/offer/blocks/elements.scss"
+      ]
+    },
+    {
+      "path": "pug/index.jade",
+      "imports": [
+        "pug/header.jade",
+        "pug/offer/offer.jade",
+        "pug/offer/one-rose.jade",
+        "pug/offer/seven-rose.jade",
+        "pug/offer/popular.jade",
+        "pug/offer/custom-rose.jade"
       ]
     }
   ],
