update count jq

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -33,13 +33,15 @@
         "scss/UI/color.scss",
         "scss/header/header.scss",
         "scss/offer/offer.scss",
+        "scss/our-rose/our-rose.scss",
         "scss/header/navigation.scss",
         "scss/header/about.scss",
         "scss/header/logo.scss",
         "scss/header/yellow-block.scss",
         "scss/header/button-block.scss",
         "scss/offer/blocks/main-block.scss",
-        "scss/offer/blocks/elements.scss"
+        "scss/offer/blocks/elements.scss",
+        "scss/offer/blocks/custom-rose.scss"
       ]
     },
     {
