--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,8 @@
         "scss/header/header.scss",
         "scss/offer/offer.scss",
         "scss/our-rose/our-rose.scss",
+        "scss/features/features.scss",
+        "scss/footer/footer.scss",
         "scss/header/navigation.scss",
         "scss/header/about.scss",
         "scss/header/logo.scss",
@@ -49,6 +51,9 @@
       "imports": [
         "pug/header.jade",
         "pug/offer/offer.jade",
+        "pug/our-rose.jade",
+        "pug/features.jade",
+        "pug/footer.jade",
         "pug/offer/one-rose.jade",
         "pug/offer/seven-rose.jade",
         "pug/offer/popular.jade",
@@ -57,7 +62,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
