--- a/prepros-6.config
+++ b/prepros-6.config
@@ -34,6 +34,7 @@
         "scss/header/header.scss",
         "scss/offer/offer.scss",
         "scss/our-rose/our-rose.scss",
+        "scss/our-rose/more-images.scss",
         "scss/features/features.scss",
         "scss/footer/footer.scss",
         "scss/header/navigation.scss",
