--- a/prepros-6.config
+++ b/prepros-6.config
@@ -6,12 +6,18 @@
     {
       "path": "pug/index.jade",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "img/our-rose/rose1.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":1912060,\"newSize\":1877441}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "scss",
-      "pug"
+      "pug",
+      "img",
+      "img/our-rose"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -63,7 +69,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
